# actinia-example-plugin

./: .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py  tests_with_kvdb.sh  tests_with_redis.sh
.github/workflows/: flake8.yml  linting.yml  post-pr-reviews.yml  python-publish.yml  test.yml
docker/: Dockerfile  actinia.cfg  docker-compose.yml
docker/actinia-example-plugin-test/: Dockerfile  actinia-example-plugin-test.cfg
docker/redis_data/: dump.rdb
scripts/: create_own_plugin.sh
src/actinia_example_plugin/: __init__.py  endpoints.py  wsgi.py
src/actinia_example_plugin/api/: __init__.py  helloworld.py  project_helloworld.py
src/actinia_example_plugin/apidocs/: __init__.py  helloworld.py  project_helloworld.py
src/actinia_example_plugin/core/: __init__.py  example.py
src/actinia_example_plugin/model/: __init__.py  response_models.py
tests/: __init__.py  conftest.py  test_resource_base.py  testsuite.py
tests/integrationtests/: __init__.py  test_helloworld.py  test_projecthelloworld.py
tests/unittests/: __init__.py  test_transformation.py
